- "social activity" posts can now be previewed just like normal pages can
- Rewrote RCData classes to inherit from an abstract class, and moved them all into a folder
- Added some missing translation support for symbols
- [Bug] Comment timestamp links (when in grouped mode) now correctly link / update once page name is fetched via API


== 2.16 - 21 August 2021 ==
- Changed how CSS loads so that it works on gamepedia wikis
- Tweaked CSS for wiki info banner - no longer hardcoded to yellow, now uses dynamic wiki CSS variables for colors
- Switch Arrow images to those used by UCP (thanks Caburum)
	https://community.fandom.com/resources-ucp/resources/src/mediawiki.icon/images/arrow-collapsed-ltr.png
	https://community.fandom.com/resources-ucp/resources/src/mediawiki.icon/images/arrow-expanded.png
- added support for some logs: contentmodel, abusefilter, and Special:AbuseLog

== 2.15i - 28 July 2021 ==
- Updated workaround for fetching fandom-based favicons caused by fandomdesktop theme (since fandom has still not fixed favicon returned in siteinfo api call)
- Marked gamepedia as a "isWikiaWiki" domain - this fixes gamepedia links have wrong favicon since thier api is now busted due issue above due to now being fandom wikis.


== 2.15h - 2 April 2021 ==
- Fandom changed how to access discussion API, so script updated in kind


== 2.15g - 18 February 2021 ==
- Free proxy is unreliable, making my own proxy script
- Added link to Social Activity for fandom wiki panels


== 2.15f - 9 February 2021 ==
- Fixed translation issue due to grammar rules in German
- Fixed new date formats not being accounted for
- Fixing bug where previewing a page would cause the site's favicon the be overwritten with the one of the previewed site
- Added custom button style to replace old wikia one


== 2.15e - 20 January 2021 ==
- Fixed issue with chat logs on UCP
- Added missing log into i18n (`logentry-delete-delete_redir`)


== 2.15d - 11 January 2021 ==